--- a/base/build.gradle
+++ b/base/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     api 'com.android.support.constraint:constraint-layout:1.1.2'
     api 'com.android.support:design:27.1.1'
     api 'com.android.support:support-v4:27.1.1'
+//    api 'com.google.android.material:material:1.0.0-rc01' // TODO: migrate
     application project(':app')
     feature project(':feature')
 }
