--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ org.gradle.jvmargs=-Xmx1536m
 #
 #See: https://developer.android.com/topic/libraries/data-binding/start#preview-compiler
 #android.databinding.enableV2=true
+#
+#android.useAndroidX=true
+#android.enableJetifier=false
+#android.enableD8=false
